--- a/remastersys-gtk/ChangeLog
+++ b/remastersys-gtk/ChangeLog
@@ -1,3 +1,3 @@
-2013-10-19 Mutse <yyhoo2.young@gmail.com>
+2013-10-19 Enperry <enperrydoesvrextra@gmail.com>
 
 	* First debianized packaging with setuptools.
